--- a/MSUdetails.html
+++ b/MSUdetails.html
@@ -53,13 +53,14 @@
         media="all" />
 
     <script type="text/javascript" src="js/MSUsearch.js"></script>
+    <script type="text/javascript" src="js/MSUUser.js"></script>
     <script src="//cdn01.its.msstate.edu/e/modernizr/2.8.3/modernizr.min.js"></script>
     <script src="js/scripts.js"></script>
     <!--<script type="text/javascript" src="js/MSUMap.js"></script>-->
 
 </head>
 
-<body onload="viewDetails(); otherCopies(); loadMap();" class="basedrupal  simplean ">
+<body onload="viewDetails(); otherCopies(); loadMap(); loginSwap();" class="basedrupal  simplean ">
 
     <!--[if lte IE 9]><p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
 
@@ -188,7 +189,7 @@
                                     <li class="leaf"><a href="#" onclick="FreshSearch()">Browse</a></li>
                                     <li class="leaf"><a href="./volunteers.html">Volunteers</a></li>
                                     <li class="leaf"><a href="./aboutUs.html">About Us</a></li>
-                                    <li class="last leaf"><a href="./login.html">Login</a></li>
+                                    <li id="account" class="last leaf"><a href="./login.html">Login</a></li>
                                 </ul>
                             </ul>
                         </div>
