--- a/browse.html
+++ b/browse.html
@@ -61,12 +61,13 @@
         media="all" />
 
     <script type="text/javascript" src="js/MSUsearch.js"></script>
+    <script type="text/javascript" src="js/MSUUser.js"></script>
     <script src="//cdn01.its.msstate.edu/e/modernizr/2.8.3/modernizr.min.js"></script>
     <script src="js/scripts.js"></script>
 
 </head>
 
-<body onload="search()" class="basedrupal  simplean ">
+<body onload="search(); loginSwap()" class="basedrupal  simplean ">
 
     <!--[if lte IE 9]><p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
 
@@ -195,7 +196,7 @@
                                     <li class="leaf active"><a href="#" onclick="FreshSearch()">Browse</a></li>
                                     <li class="leaf"><a href="./volunteers.html">Volunteers</a></li>
                                     <li class="leaf"><a href="./aboutUs.html">About Us</a></li>
-                                    <li class="last leaf"><a href="./login.html">Login</a></li>
+                                    <li id="account" class="last leaf"><a href="./login.html">Login</a></li>
                                 </ul>
                             </ul>
                         </div>
