--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
 
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
     <script type="text/javascript" src="js/MSUsearch.js"></script>
+    <script type="text/javascript" src="js/MSUUser.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124736054-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -239,18 +240,18 @@
                                                         <div class="content">
                                                             <div class="jumbotron text-center">
                                                                 <h2>Sign In</h2>
-                                                                <input id = "loginName" class="form-control" name="loginUser"
-                                                                type="text" style="display:inline; width: 25%"placeholder="Username" minlength="3" maxlength="25"></input>
+                                                                <input id = "email" class="form-control" name="loginUser"
+                                                                type="text" style="display:inline; width: 25%" placeholder="E-mail" minlength="3" maxlength="52"></input>
                                                                 <input id = "password" class="form-control" name="userPassword"
                                                                 type="password" style="display:inline; width: 25%"placeholder="Password" minlength="5" maxlength="52"></input><br><br>
                                                                 
-                                                                        </select>
-                                                                        <button id="login">
-                                                                            Login
-                                                                        </button>
-                                                                        <button onclick="location.href = './CreateUser.html';">
-                                                                            Create Account
-                                                                        </button>
+                                                                </select>
+                                                                <button id="login" onclick="login()">
+                                                                    Login
+                                                                </button>
+                                                                <button onclick="location.href = './CreateUser.html';">
+                                                                    Request Account
+                                                                </button>
                                                                         
                                                                     </div>
                                                                 </div>
@@ -282,7 +283,7 @@
         </div>
         <!-- /#page -->
         <!-- footer -->
-        <footer id="msu-footer" class="msu-footer" style="position: fixed; bottom: 0;left: 0;right: 0;">
+        <footer id="msu-footer" class="msu-footer" style="bottom: 0;left: 0;right: 0;">
 
             <div class="container-fluid clearfix">
                 <div class="row">
